Fix spacing below privacy policy, closes #125

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -9,7 +9,7 @@ body {
 }
 #main {
   padding-top: 180px;
-  min-height: calc(100vh - 180px);
+  min-height: calc(100vh - 360px);
   overflow-x: hidden;
   // @include media-breakpoint-down(md){
   //   overflow-x: hidden;
